--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,13 @@ $spot-color: rgb(60,0,255); // bright blue
 $spot-color-riff: rgb(194,237,219);  // mint
 $spot-color-dark: rgb(50,50,50);  // dark gray
 
+$color-one: rgb(36,75,255);
+$color-two: rgb(254,103,91);
+$color-three: rgb(15,204,131);
+
+
+
+
 
 
 $link-color: rgb(255,255,255);
