--- a/styles/main.css
+++ b/styles/main.css
@@ -1224,6 +1224,11 @@ or wrap each row of columns in a <div class="row"> */
 	    font-weight: normal;
 	    font-style: normal; }
 */
+/*
+$color-one: rgba(36,75,255,0.25);
+$color-two: rgba(254,103,91,0.25);
+$color-three: rgba(15,204,131,0.25);
+*/
 .cs-style-1 figure {
   margin: 0;
   position: relative; }
@@ -1242,16 +1247,17 @@ or wrap each row of columns in a <div class="row"> */
   color: #000; }
 
 .cs-style-1 figcaption.one {
-  background: rgba(36, 75, 255, 0.95); }
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0, 255, 68, 0.9)), color-stop(100%, rgba(0, 255, 209, 0.666))); }
 
 .cs-style-1 figcaption.two {
-  background: rgba(254, 103, 91, 0.95); }
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(238, 108, 254, 0.9)), color-stop(100%, rgba(255, 108, 254, 0.666))); }
 
 .cs-style-1 figcaption.three {
-  background: rgba(15, 204, 131, 0.95); }
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(48, 175, 252, 0.9)), color-stop(100%, rgba(178, 86, 254, 0.666))); }
 
 .hover-caption {
-  padding: 18px; }
+  padding: 18px;
+  /*   	color: #fff; */ }
 
 .cs-style-1 figcaption h3 {
   margin: 0;
@@ -1263,7 +1269,7 @@ or wrap each row of columns in a <div class="row"> */
   border-radius: 2px;
   display: inline-block;
   background: #fff;
-  color: #3c00ff; }
+  color: #000; }
 
 /* Individual Caption Styles */
 .cs-style-1 figcaption {
@@ -1280,10 +1286,12 @@ or wrap each row of columns in a <div class="row"> */
 .no-touch .cs-style-1 figure:hover figcaption,
 .cs-style-1 figure.cs-hover figcaption {
   opacity: 1;
-  -webkit-transform: translate(5.94px, 5.94px);
-  -moz-transform: translate(5.94px, 5.94px);
-  -ms-transform: translate(5.94px, 5.94px);
-  transform: translate(5.94px, 5.94px); }
+  /*
+  	-webkit-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+  	-moz-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+  	-ms-transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+  	transform: translate(($univ-pad * 0.33), ($univ-pad * 0.33));
+  */ }
 
 .cs-style-1 figcaption h3 {
   margin-top: 18px; }
@@ -1330,6 +1338,15 @@ h4 {
   text-transform: uppercase;
   text-align: center; }
 
+h4 .one {
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0, 255, 68, 0.9)), color-stop(100%, rgba(0, 255, 209, 0.666))); }
+
+h4 .two {
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(238, 108, 254, 0.9)), color-stop(100%, rgba(255, 108, 254, 0.666))); }
+
+h4 .three {
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(48, 175, 252, 0.9)), color-stop(100%, rgba(178, 86, 254, 0.666))); }
+
 p {
   color: black;
   font-size: 16px;
@@ -1354,17 +1371,6 @@ p {
   margin-bottom: 9px;
   text-align: left;
   margin-right: 9px; }
-
-.student-container h4, .student-container p {
-  margin: 11.88px 18px 0 0;
-  padding: 13.5px 18px 9px 18px;
-  z-index: 10;
-  background-color: rgba(255, 255, 255, 0.5); }
-.student-container p {
-  margin-top: 0;
-  padding-top: 0;
-  padding-bottom: 18px;
-  font-size: 16px; }
 
 a {
   line-height: 24px; }
