--- a/styles/main.css
+++ b/styles/main.css
@@ -1208,22 +1208,6 @@ or wrap each row of columns in a <div class="row"> */
 /* All Mobile Sizes (devices and browser) */
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-/* #Font-Face
-================================================== */
-/* 	This is the proper syntax for an @font-face file
-		Just create a "fonts" folder at the root,
-		copy your FontName into code below and remove
-		comment brackets */
-/*	@font-face {
-	    font-family: 'FontName';
-	    src: url('../fonts/FontName.eot');
-	    src: url('../fonts/FontName.eot?iefix') format('eot'),
-	         url('../fonts/FontName.woff') format('woff'),
-	         url('../fonts/FontName.ttf') format('truetype'),
-	         url('../fonts/FontName.svg#webfontZam02nTh') format('svg');
-	    font-weight: normal;
-	    font-style: normal; }
-*/
 /*
 $color-one: rgba(36,75,255,0.25);
 $color-two: rgba(254,103,91,0.25);
@@ -1382,17 +1366,14 @@ p {
 a {
   line-height: 24px; }
 
-a:hover {
-  color: #3c00ff; }
-
-a:focus {
+a:focus, a:visited {
   color: #3c00ff; }
 
 a:active {
   color: #3c00ff; }
 
-a:visited {
-  color: inherit; }
+a:hover {
+  color: #3c00ff; }
 
 nav {
   width: 100%;
