--- a/styles/main.css
+++ b/styles/main.css
@@ -1317,6 +1317,10 @@ h1 {
   font-size: 50px;
   margin-bottom: 18px; }
 
+h3 {
+  font-size: 32px;
+  margin-bottom: 18px; }
+
 h4 {
   /** Name (under pic) **/
   font-size: 15px;
@@ -1345,8 +1349,9 @@ p {
   padding: 0;
   letter-spacing: 0.015em;
   line-height: 1.125em; }
-  p #header {
-    max-width: 80%; }
+
+#header p {
+  max-width: 80%; }
 
 /* Layout Styles *******************/
 #container {
@@ -1392,7 +1397,24 @@ footer {
   padding: 12px; }
 
 /** Responsive Styles ******************************************************/
+@media screen and (max-width: 1024px) {
+  #page {
+    width: 960px; } }
+@media screen and (max-width: 980px) {
+  #page {
+    width: 80%;
+    padding: 10%; } }
 @media screen and (max-width: 760px) {
+  h4 {
+    font-size: 13px; }
+
+  .cs-style-1 figcaption h3 {
+    font-size: 22px;
+    margin-top: 0; }
+
+  #header p {
+    max-width: 90%; } }
+@media screen and (max-width: 480px) {
   .cs-style-1 figure {
     width: 220px;
     margin: 0px auto; }
@@ -1409,23 +1431,6 @@ footer {
 
   h1 {
     font-size: 37px; } }
-@media screen and (min-width: 761px) {
-  h4 {
-    font-size: 13px; }
-
-  .cs-style-1 figcaption h3 {
-    font-size: 22px;
-    margin-top: 0; }
-
-  #header p {
-    max-width: 90%; } }
-@media screen and (min-width: 981px) {
-  #page {
-    width: 80%;
-    padding: 10%; } }
-@media screen and (min-width: 1025px) {
-  #page {
-    width: 960px; } }
 /** @fontface Import ******************************************************/
 @font-face {
   font-family: 'Calibre';
