dave site is fucked?

--- a/dlam/css/iefonts_index.css
+++ b/dlam/css/iefonts_index.css
@@ -8,6 +8,16 @@
 	font-family: neuton-i4, serif;
 }
 
+#u715-10,#u749-2,#u749-6,#u749-8,#u749-10,#u751-11,#u752-14,#u753-10,#u754-7
+{
+	font-family: source-sans-pro-n4, sans-serif;
+}
+
+#u715-2,#u749-4,#u751-4,#u751-7,#u752-4,#u752-10,#u753-6,#u754-2
+{
+	font-family: source-sans-pro-n6, sans-serif;
+}
+
 #u1172-2,#u1174-2,#u1173-2,#u1177-2,#u1175-2,#u1178-2,#u1179-2,#u1180-2,#u1181-2,#u1182-2,#u1183-2,#u1184-2,#u926-4,#u965-4,#u979-4,#u993-4,#u1007-4
 {
 	font-family: neuton-n4, serif;
