--- a/dlam/css/index.css
+++ b/dlam/css/index.css
@@ -21,7 +21,7 @@
 
 #u1568
 {
-	z-index: 232;
+	z-index: 246;
 	width: 1160px;
 	border-style: none;
 	border-color: transparent;
@@ -32,7 +32,7 @@
 
 #u1569-4
 {
-	z-index: 233;
+	z-index: 247;
 	width: 151px;
 	min-height: 36px;
 	text-align: left;
@@ -78,7 +78,7 @@
 
 #u850
 {
-	z-index: 73;
+	z-index: 87;
 	width: 590px;
 	position: relative;
 	margin-right: -10000px;
@@ -88,7 +88,7 @@
 
 #menuu1590
 {
-	z-index: 245;
+	z-index: 259;
 	width: 724px;
 	border-style: none;
 	border-color: transparent;
@@ -400,7 +400,7 @@
 
 #u1589
 {
-	z-index: 244;
+	z-index: 258;
 	width: 1160px;
 	height: 34px;
 	border-style: none;
@@ -420,7 +420,7 @@
 
 #u856-7
 {
-	z-index: 75;
+	z-index: 89;
 	width: 604px;
 	min-height: 201px;
 	font-size: 20px;
@@ -434,19 +434,19 @@
 #pu1172-7
 {
 	width: 0.01px;
-	margin-left: 21px;
+	margin-left: 22px;
 	margin-top: 41px;
 	position: relative;
 }
 
 #u1172-7
 {
-	z-index: 153;
+	z-index: 167;
 	width: 136px;
 	min-height: 216px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 146px;
+	margin-top: 157px;
 }
 
 #u1172-2
@@ -457,29 +457,40 @@
 	font-weight: 400;
 }
 
-#u715-8
+#pu715-10
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	position: relative;
+	margin-right: -10000px;
+	left: 155px;
+}
+
+#u715-10
 {
 	z-index: 14;
 	width: 604px;
 	min-height: 222px;
-	font-size: 16px;
+	font-size: 17px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 	margin-left: 1px;
 	position: relative;
 }
 
-#u715-2
+#u715-4
 {
 	line-height: 1.23;
 	padding-bottom: 8px;
 }
 
-#u715-4
+#u715-6
 {
 	line-height: 1.24;
 	padding-bottom: 8px;
 }
 
-#u715-6
+#u715-8
 {
 	line-height: 1.23;
 }
@@ -487,13 +498,13 @@
 #pu835
 {
 	width: 0.01px;
-	margin-top: 42px;
+	margin-top: 25px;
 	position: relative;
 }
 
 #u835
 {
-	z-index: 71;
+	z-index: 85;
 	width: 293px;
 	position: relative;
 	margin-right: -10000px;
@@ -501,7 +512,7 @@
 
 #u825
 {
-	z-index: 69;
+	z-index: 83;
 	width: 290px;
 	position: relative;
 	margin-right: -10000px;
@@ -510,7 +521,7 @@
 
 #u1174-6
 {
-	z-index: 166;
+	z-index: 180;
 	width: 136px;
 	min-height: 200px;
 	font-size: 12px;
@@ -518,7 +529,7 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 331px;
-	left: 781px;
+	left: 780px;
 }
 
 #u1174-4
@@ -538,7 +549,7 @@
 
 #u859
 {
-	z-index: 82;
+	z-index: 96;
 	width: 192px;
 	position: relative;
 	margin-right: -10000px;
@@ -546,7 +557,7 @@
 
 #u869
 {
-	z-index: 86;
+	z-index: 100;
 	width: 184px;
 	position: relative;
 	margin-right: -10000px;
@@ -555,24 +566,16 @@
 
 #u864
 {
-	z-index: 84;
+	z-index: 98;
 	width: 184px;
 	position: relative;
 	margin-right: -10000px;
 	left: 423px;
 }
 
-#pu1173-6
-{
-	width: 0.01px;
-	margin-left: 22px;
-	margin-top: 46px;
-	position: relative;
-}
-
 #u1173-6
 {
-	z-index: 160;
+	z-index: 174;
 	width: 131px;
 	min-height: 184px;
 	font-size: 13px;
@@ -588,9 +591,9 @@
 	font-family: neuton, serif;
 }
 
-#u749-11
+#u749-13
 {
-	z-index: 26;
+	z-index: 28;
 	width: 604px;
 	min-height: 553px;
 	position: relative;
@@ -598,27 +601,31 @@
 	left: 156px;
 }
 
-#u749-2,#u749-4,#u749-6
+#u749-2,#u749-6,#u749-8
 {
-	font-size: 16px;
+	font-size: 17px;
 	padding-bottom: 8px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 }
 
-#u749-8
+#u749-10
 {
-	font-size: 16px;
+	font-size: 17px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 }
 
 #u1177-6
 {
-	z-index: 178;
+	z-index: 192;
 	width: 136px;
 	min-height: 158px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 266px;
+	margin-top: 283px;
 	left: 780px;
 }
 
@@ -626,13 +633,13 @@
 {
 	width: 0.01px;
 	margin-left: 22px;
-	margin-top: 17px;
+	margin-top: 4px;
 	position: relative;
 }
 
 #u1175-6
 {
-	z-index: 172;
+	z-index: 186;
 	width: 136px;
 	min-height: 188px;
 	font-size: 13px;
@@ -643,7 +650,7 @@
 
 #u716
 {
-	z-index: 22;
+	z-index: 24;
 	width: 293px;
 	position: relative;
 	margin-right: -10000px;
@@ -659,7 +666,7 @@
 
 #u874
 {
-	z-index: 88;
+	z-index: 102;
 	width: 293px;
 	position: relative;
 	margin-right: -10000px;
@@ -667,22 +674,22 @@
 	left: 469px;
 }
 
-#pu1178-7
+#pu1173-6,#pu1178-7
 {
 	width: 0.01px;
 	margin-left: 22px;
-	margin-top: 38px;
+	margin-top: 26px;
 	position: relative;
 }
 
 #u1178-7
 {
-	z-index: 184;
+	z-index: 198;
 	width: 136px;
 	min-height: 344px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
+	margin-top: 3px;
 }
 
 #u1178-2
@@ -700,12 +707,14 @@
 	font-style: italic;
 }
 
-#u751-8
+#u751-11
 {
-	z-index: 37;
+	z-index: 41;
 	width: 604px;
 	min-height: 539px;
-	font-size: 16px;
+	font-size: 17px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
 	left: 156px;
@@ -713,20 +722,20 @@
 
 #u1179-6
 {
-	z-index: 191;
+	z-index: 205;
 	width: 136px;
 	min-height: 75px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 363px;
+	margin-top: 386px;
 	left: 780px;
 }
 
 #u879
 {
-	z-index: 90;
+	z-index: 104;
 	width: 263px;
 	-webkit-transform: rotate(270deg);
 	-moz-transform: rotate(270deg);
@@ -734,8 +743,8 @@
 	-o-transform: rotate(270deg);
 	transform: rotate(270deg);
 	margin-left: 348px;
-	top: -145px;
-	margin-bottom: -315px;
+	top: -146px;
+	margin-bottom: -316px;
 	position: relative;
 }
 
@@ -751,23 +760,35 @@
 	margin: -13px -282px -9px -7px;
 }
 
+#pu1180-6
+{
+	width: 0.01px;
+	margin-left: 22px;
+	margin-top: 15px;
+	position: relative;
+}
+
 #u1180-6
 {
-	z-index: 197;
+	z-index: 211;
 	width: 136px;
 	min-height: 309px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: 2px;
 }
 
-#u752-10
+#u752-14
 {
-	z-index: 45;
+	z-index: 52;
 	width: 604px;
 	min-height: 445px;
-	font-size: 16px;
+	font-size: 17px;
+	color: #000000;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
 	left: 156px;
@@ -775,20 +796,20 @@
 
 #u1181-6
 {
-	z-index: 203;
+	z-index: 217;
 	width: 136px;
 	min-height: 56px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 449px;
+	margin-top: 475px;
 	left: 780px;
 }
 
 #u884
 {
-	z-index: 92;
+	z-index: 106;
 	width: 475px;
 	-webkit-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
@@ -796,8 +817,8 @@
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg);
 	margin-left: 244px;
-	top: -41px;
-	margin-bottom: -105px;
+	top: -54px;
+	margin-bottom: -118px;
 	position: relative;
 }
 
@@ -813,31 +834,34 @@
 	margin: -4px -8px -7px -6px;
 }
 
-#pu1180-6,#pu1182-6
+#pu1182-6
 {
 	width: 0.01px;
 	margin-left: 22px;
-	margin-top: 30px;
+	margin-top: 10px;
 	position: relative;
 }
 
 #u1182-6
 {
-	z-index: 209;
+	z-index: 223;
 	width: 136px;
 	min-height: 83px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: 2px;
 }
 
-#u753-8
+#u753-10
 {
-	z-index: 55;
+	z-index: 66;
 	width: 604px;
 	min-height: 379px;
-	font-size: 16px;
+	font-size: 17px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
 	left: 156px;
@@ -847,7 +871,7 @@
 {
 	width: 0.01px;
 	margin-left: 178px;
-	margin-top: 27px;
+	margin-top: 24px;
 	position: relative;
 }
 
@@ -857,18 +881,19 @@
 	padding-bottom: 1px;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: 5px;
 }
 
 #u899
 {
-	z-index: 96;
+	z-index: 110;
 	width: 292px;
 	position: relative;
 }
 
 #u889
 {
-	z-index: 94;
+	z-index: 108;
 	width: 292px;
 	margin-top: 32px;
 	position: relative;
@@ -876,10 +901,11 @@
 
 #u904
 {
-	z-index: 98;
+	z-index: 112;
 	width: 292px;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: 5px;
 	left: 314px;
 }
 
@@ -899,7 +925,7 @@
 
 #u1183-6
 {
-	z-index: 215;
+	z-index: 229;
 	width: 136px;
 	min-height: 110px;
 	font-size: 13px;
@@ -913,20 +939,20 @@
 {
 	width: 0.01px;
 	margin-left: 22px;
-	margin-top: 39px;
+	margin-top: 19px;
 	position: relative;
 }
 
 #u1184-6
 {
-	z-index: 221;
+	z-index: 235;
 	width: 136px;
 	min-height: 252px;
 	font-size: 13px;
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 164px;
+	margin-top: 175px;
 }
 
 #u1177-2,#u1175-2,#u1179-2,#u1180-2,#u1181-2,#u1182-2,#u1183-2,#u1184-2
@@ -940,7 +966,7 @@
 	font-style: italic;
 }
 
-#pu715-8,#pu754-6
+#pu754-7
 {
 	width: 0.01px;
 	padding-bottom: 0px;
@@ -949,23 +975,32 @@
 	left: 156px;
 }
 
-#u754-6
+#u754-7
 {
-	z-index: 63;
+	z-index: 76;
 	width: 604px;
 	min-height: 339px;
-	font-size: 16px;
+	font-size: 17px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 400;
 	position: relative;
 }
 
-#u751-2,#u751-4,#u752-2,#u752-4,#u752-6,#u753-2,#u753-4,#u754-2
+#u751-2,#u751-5,#u752-2,#u752-6,#u752-8,#u753-2,#u753-4,#u754-3
 {
 	padding-bottom: 8px;
 }
 
+#u715-2,#u749-4,#u751-4,#u751-7,#u752-4,#u752-10,#u753-6,#u754-2
+{
+	color: #FF0000;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 600;
+}
+
 #u726
 {
-	z-index: 24;
+	z-index: 26;
 	width: 604px;
 	top: -4px;
 	margin-bottom: -4px;
@@ -1017,7 +1052,7 @@
 
 #u1200
 {
-	z-index: 227;
+	z-index: 241;
 	width: 604px;
 	border-style: none;
 	border-color: transparent;
@@ -1036,7 +1071,7 @@
 
 #u1140
 {
-	z-index: 151;
+	z-index: 165;
 	width: 916px;
 	left: 122px;
 	margin-top: 33px;
@@ -1045,7 +1080,7 @@
 
 #u1578
 {
-	z-index: 237;
+	z-index: 251;
 	width: 916px;
 	left: 122px;
 	margin-top: 20px;
@@ -1054,7 +1089,7 @@
 
 #u1132
 {
-	z-index: 145;
+	z-index: 159;
 	width: 916px;
 	left: 121px;
 	margin-top: 19px;
@@ -1063,7 +1098,7 @@
 
 #u1138
 {
-	z-index: 149;
+	z-index: 163;
 	width: 916px;
 	left: 121px;
 	margin-top: 21px;
@@ -1072,7 +1107,7 @@
 
 #u1552
 {
-	z-index: 228;
+	z-index: 242;
 	width: 920px;
 	left: 121px;
 	margin-top: 19px;
@@ -1081,7 +1116,7 @@
 
 #u1557
 {
-	z-index: 230;
+	z-index: 244;
 	width: 917px;
 	left: 122px;
 	margin-top: 20px;
@@ -1095,7 +1130,7 @@
 
 #u1134
 {
-	z-index: 147;
+	z-index: 161;
 	width: 916px;
 	left: 122px;
 	margin-top: 20px;
@@ -1104,7 +1139,7 @@
 
 #u1124
 {
-	z-index: 141;
+	z-index: 155;
 	width: 916px;
 	left: 122px;
 	margin-top: 20px;
@@ -1113,7 +1148,7 @@
 
 #u1126
 {
-	z-index: 143;
+	z-index: 157;
 	width: 916px;
 	left: 122px;
 	margin-top: 20px;
@@ -1127,7 +1162,7 @@
 
 #slideshowu909
 {
-	z-index: 100;
+	z-index: 114;
 	width: 0.01px;
 	height: 811px;
 	position: relative;
@@ -1146,12 +1181,12 @@
 
 #u930popup
 {
-	z-index: 101;
+	z-index: 115;
 }
 
 #u931
 {
-	z-index: 102;
+	z-index: 116;
 	width: 504px;
 	height: 713px;
 	border-style: none;
@@ -1163,7 +1198,7 @@
 
 #u959
 {
-	z-index: 104;
+	z-index: 118;
 	width: 504px;
 	height: 713px;
 	border-style: none;
@@ -1180,7 +1215,7 @@
 
 #u973
 {
-	z-index: 106;
+	z-index: 120;
 	width: 504px;
 	height: 713px;
 	border-style: none;
@@ -1192,7 +1227,7 @@
 
 #u987
 {
-	z-index: 108;
+	z-index: 122;
 	width: 504px;
 	height: 713px;
 	border-style: none;
@@ -1209,7 +1244,7 @@
 
 #u1001
 {
-	z-index: 110;
+	z-index: 124;
 	width: 504px;
 	height: 713px;
 	border-style: none;
@@ -1234,12 +1269,12 @@
 
 #u925popup
 {
-	z-index: 112;
+	z-index: 126;
 }
 
 #u926-4
 {
-	z-index: 113;
+	z-index: 127;
 	width: 388px;
 	min-height: 80px;
 	text-align: left;
@@ -1253,7 +1288,7 @@
 
 #u965-4
 {
-	z-index: 117;
+	z-index: 131;
 	width: 388px;
 	min-height: 80px;
 	text-align: left;
@@ -1267,7 +1302,7 @@
 
 #u979-4
 {
-	z-index: 121;
+	z-index: 135;
 	width: 388px;
 	min-height: 80px;
 	text-align: left;
@@ -1281,7 +1316,7 @@
 
 #u993-4
 {
-	z-index: 125;
+	z-index: 139;
 	width: 388px;
 	min-height: 80px;
 	text-align: left;
@@ -1295,7 +1330,7 @@
 
 #u1007-4
 {
-	z-index: 129;
+	z-index: 143;
 	width: 388px;
 	min-height: 80px;
 	text-align: left;
@@ -1321,7 +1356,7 @@
 
 #u937-4popup
 {
-	z-index: 133;
+	z-index: 147;
 }
 
 #u934-4
@@ -1339,7 +1374,7 @@
 
 #u934-4popup
 {
-	z-index: 137;
+	z-index: 151;
 }
 
 .MenuItem,.SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* unifiedNavBar */
